Address Sonar findings in model and test classes